--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,5 +51,5 @@ jobs:
           file: ./Dockerfile
           # platforms: linux/amd64
           push: true
-          # tags: ${{ steps.docker_meta.outputs.tags }}
+          tags: ${{ steps.docker_meta.outputs.tags }}
           # labels: ${{ steps.docker_meta.outputs.labels }}
