--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
         id: docker_meta
         uses: crazy-max/ghaction-docker-meta@v1
         with:
-          images: react-docker
+          images: we2dinc/react-docker
           tag-semver: |
             {{version}}
             {{major}}.{{minor}}
